--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 ​
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <h1>Brew Finder</h1>
         </a>
